--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
       padding: 0;
       background-color: #f0f4f8;
       color: #222;
+      background-image: url('logo.png');
+      background-repeat: no-repeat;
+      background-position: center;
+      background-size: 400px;
+      background-attachment: fixed;
+      opacity: 1;
     }
 
     header {
@@ -49,7 +55,7 @@
       flex: 1 1 60%;
       padding: 40px;
       max-width: 900px;
-      background-color: #ffffff;
+      background-color: #ffffffcc;
       border-radius: 8px;
       box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
       box-sizing: border-box;
